--- a/src/main/resources/com/prokopchuk/lab_2/application_ui.fxml
+++ b/src/main/resources/com/prokopchuk/lab_2/application_ui.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="800.0" maxWidth="1300.0" minHeight="800.0" minWidth="1300.0" prefHeight="800.0" prefWidth="1300.0" style="-fx-background-color: #fffcad; -fx-opacity: 0.7;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="800.0" maxWidth="1300.0" minHeight="800.0" minWidth="1300.0" prefHeight="800.0" prefWidth="1300.0" style="-fx-background-color: #fffcad; -fx-opacity: 0.7;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.prokopchuk.lab_2.ApplicationUI">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
@@ -58,7 +58,7 @@
                   <Font name="Agency FB" size="21.0" />
                </font>
             </Label>
-            <ComboBox prefHeight="25.0" prefWidth="273.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1" />
+            <ComboBox fx:id="dataStructureComboBox" prefHeight="25.0" prefWidth="273.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1" />
             <Label prefHeight="26.0" prefWidth="199.0" text="Operation" GridPane.rowIndex="2">
                <font>
                   <Font name="Agency FB" size="21.0" />
@@ -68,7 +68,7 @@
                <children>
                   <VBox prefHeight="63.0" prefWidth="86.0">
                      <children>
-                        <RadioButton mnemonicParsing="false" prefHeight="47.0" prefWidth="64.0" selected="true" text="Insert">
+                        <RadioButton fx:id="insertRadioBtn" mnemonicParsing="false" prefHeight="47.0" prefWidth="64.0" selected="true" text="Insert">
                            <font>
                               <Font name="Agency FB" size="17.0" />
                            </font>
@@ -76,7 +76,7 @@
                               <ToggleGroup fx:id="ModifyingOperations" />
                            </toggleGroup>
                         </RadioButton>
-                        <RadioButton mnemonicParsing="false" prefHeight="42.0" prefWidth="81.0" text=" Remove" toggleGroup="$ModifyingOperations">
+                        <RadioButton fx:id="removeRadioBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="81.0" text=" Remove" toggleGroup="$ModifyingOperations">
                            <font>
                               <Font name="Agency FB" size="16.0" />
                            </font>
@@ -90,20 +90,20 @@
                   <Font name="Agency FB" size="21.0" />
                </font>
             </Label>
-            <TextField prefHeight="25.0" prefWidth="225.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" />
+            <TextField fx:id="inputField" prefHeight="25.0" prefWidth="225.0" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" />
             <VBox prefHeight="118.0" prefWidth="72.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
                <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="75.0" text="Apply ">
+                  <Button fx:id="applyBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="75.0" text="Apply ">
                      <font>
                         <Font name="Agency FB" size="19.0" />
                      </font>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="75.0" text="Undo">
+                  <Button fx:id="undoBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="75.0" text="Undo">
                      <font>
                         <Font name="Agency FB" size="19.0" />
                      </font>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="75.0" text="Redo">
+                  <Button fx:id="redoBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="75.0" text="Redo">
                      <font>
                         <Font name="Agency FB" size="19.0" />
                      </font>
@@ -114,7 +114,7 @@
       </GridPane>
       <Pane layoutX="410.0" layoutY="18.0" prefHeight="765.0" prefWidth="876.0" style="-fx-background-color: white; -fx-border-color: black;">
          <children>
-            <Canvas height="765.0" layoutX="6.0" width="876.0" />
+            <Canvas fx:id="canvasField" height="765.0" layoutX="6.0" width="876.0" />
          </children>
       </Pane>
    </children>
